converting from Classic to Alloy first step remove the Resources folder jslint fixes problems with converting fixed bugfix file references file location fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-build
-build.log
-tmp
-._*
 .DS_Store
+build.log
+build
+npm-debug.log
+tmp
+.map
+
+Resources
+build
+.fastdev.lock
+.project
+.settings
